--- a/Computing/pom.xml
+++ b/Computing/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>flink-streaming-java</artifactId>
             <version>1.20.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.28.0-GA</version>
+        </dependency>
     </dependencies>
 
 </project>
