--- a/Computing/pom.xml
+++ b/Computing/pom.xml
@@ -27,6 +27,11 @@
             <version>1.20.0</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connectors</artifactId>
+            <version>1.20.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
             <version>3.28.0-GA</version>
