[fix] docker daemon connection

--- a/.gitignore
+++ b/.gitignore
@@ -33,10 +33,11 @@ build/
 !**/src/test/**/build/
 
 ### VS Code ###
-.vscode/
+.vscode
 
 ### Mac OS ###
 .DS_Store
 
 **/*.class
 docker/*
+Computing/logs/*
