[feat]Finish Docker network.Now nodes and host can interact with each other.

--- a/Computing/pom.xml
+++ b/Computing/pom.xml
@@ -82,6 +82,16 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-core</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-shaded-netty</artifactId>
+            <version>4.1.91.Final-17.0</version>
+        </dependency>
     </dependencies>
 
 </project>
