--- a/Computing/pom.xml
+++ b/Computing/pom.xml
@@ -92,6 +92,11 @@
             <artifactId>flink-shaded-netty</artifactId>
             <version>4.1.91.Final-17.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.13</version>
+        </dependency>
     </dependencies>
 
 </project>
