--- a/Computing/pom.xml
+++ b/Computing/pom.xml
@@ -97,6 +97,11 @@
             <artifactId>fastjson</artifactId>
             <version>2.0.13</version>
         </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.10.2</version>
+        </dependency>
     </dependencies>
 
 </project>
