--- a/Computing/pom.xml
+++ b/Computing/pom.xml
@@ -102,6 +102,12 @@
             <artifactId>reflections</artifactId>
             <version>0.10.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.sparkjava</groupId>
+            <artifactId>spark-core</artifactId>
+            <version>2.9.4</version>
+        </dependency>
+
     </dependencies>
 
 </project>
