--- a/front/visualizer/package.json
+++ b/front/visualizer/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.9",
     "echarts": "^5.5.1",
     "element-plus": "^2.9.0",
+    "pinia": "^2.3.0",
     "unplugin-auto-import": "^0.18.6",
     "unplugin-vue-components": "^0.27.5",
     "vue": "^3.5.13",
