--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,6 @@ statistics/*
 Computing/src/main/resources/config
 Computing/src/main/resources/config.json
 Computing/src/main/resources/config.properties
+Computing/src/main/resources/data*
+Computing/src/main/resources/*Data**
+debug/*
