--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ build/
 .DS_Store
 
 **/*.class
-docker/*
+docker/**/*
 Computing/logs/*
 statistics/*
 Computing/src/main/resources/config
@@ -48,3 +48,5 @@ Computing/src/main/resources/config.properties
 Computing/src/main/resources/data*
 Computing/src/main/resources/*Data**
 debug/*
+!docker/data*
+!docker/**Data*
